# rug

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements  requirements_dev
docs/: models
docs/source/: conf.py  conf.py.orig  index.rst
docs/source/stocktwits/: unofficial_api.rst
docs/source/tipranks/: unofficial_api.rst
docs/source/yahoo/: unofficial_api.rst
notebooks/: dividends.ipynb  dividends_test.ipynb  stocktwits_api.ipynb  stocktwits_auth.ipynb  year_high_low.ipynb
rug/: __init__.py  exceptions.py  stocktwits.py  tipranks.py  yahoo.py
rug/stocktwits/: __init__.py  api.py  auth.py  binder.py  cache.py  cursor.py  models.py  parsers.py  streaming.py
rug/stocktwits/official/: __init__.py  api.py  auth.py  binder.py  cursor.py  models.py  parsers.py  streaming.py  utils.py
rug/stocktwits/unofficial/: stocktwits.py
stocktwits/: __init__.py  api.py  auth.py  error.py  models.py  parsers.py  streaming.py
tests/: test_stocktwits.py  test_tipranks.py  test_yahoo.py
work/: basic_info.ipynb  earnings.ipynb  fool_outperform_players.ipynb
