[tool.poetry]
name = "rug"
version = "0.1.0"
description = "Library for fetching various stock data from the internet (official and unofficial APIs)."
authors = ["Pavel Hrdina, Patrick Roach"]
classifiers = [
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
readme = "README.md"
documentation = "https://rug.readthedocs.io/en/latest/"
homepage = "https://github.com/im-n1/rug"
repository = "https://github.com/im-n1/rug"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.11.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
jupyter = "^1.0.0"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
